--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- META TAG OG-->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dev Burger - O melhor hamburger dev!" />
+    <meta property="og:image" content="https://cardapio-one-lyart.vercel.app/assets/hamb-1.png" />
+    <meta property="og:description" content="Explosão de sabores" />
+    <meta property="og:site_name" content="DevBurger" />
+
+
+    
+
+
     <link rel="stylesheet" href="./styles/output.css" />
 
     <title>Dev Burguer - A melhor burgeria Dev</title>
